probes/main/default/objects/SMF7_Call_Participant__c/SMF7_Call_Participant__c.object-meta.xml
<CustomObject>
    <description>SMF-7: one RealtimeKit participant per (Case, User) so rejoining never creates duplicates. Server-side only.</description>
    <label>SMF7 Call Participant</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>SMF7 Call Participant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMF7 Call Participants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>