probes/main/default/objects/SMF7_Call_Participant__c/fields/ParticipantId__c.field-meta.xml
<CustomField>
    <fullName>ParticipantId__c</fullName>
    <description>RealtimeKit participant id (provider identifier; private).</description>
    <label>Participant Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>