probes/main/default/objects/SMF7_Call_Participant__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Call room.</description>
    <label>Room</label>
    <referenceTo>SMF7_Call_Room__c</referenceTo>
    <relationshipName>Participants</relationshipName>
    <type>Lookup</type>
</CustomField>