probes/main/default/objects/SMF7_Call_Participant__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>CaseId:UserId (upsert key).</description>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
    <label>Unique Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>