probes/main/default/objects/SMF7_Call_Participant__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce user.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SMF7_Call_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>